Dropping files from file manager stopped working
Categories
(Core :: Widget: Gtk, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox123 | --- | unaffected |
| firefox124 | + | fixed |
| firefox125 | --- | fixed |
People
(Reporter: bugzilla.mozilla.org, Assigned: jhorak)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: nightly-community, regression)
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
diannaS
:
approval-mozilla-beta+
|
Details | Review |
Attempting to drop a file from a file manager (nemo) to the drop area on https://catbox.moe/ started to fail recently on nightly (checked dev edition, it still works there).
The other direction, dragging an image from a site to the file manager, continues to work.
Name Firefox
Version 124.0a1
Build ID 20240216094648
Comment 1•2 years ago
|
||
[Tracking Requested - why for this release]:File upload does not work on linux.
I can reproduce this on Nightly124.0a1 Ubuntu22.04 and Linux Mint 21.3 Cinnamon.
Regression window:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=2b4e9ee6225f1183da45d24404e72f48e3803f08&tochange=bdabd37473ed5839557b90557ee6ca684a0d4500
Comment 2•2 years ago
|
||
:jhorak, since you are the author of the regressor, bug 1786251, could you take a look?
For more information, please visit BugBot documentation.
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
When trying to convert the application/x-moz-file drag target to text/uri-list use the
target drag uris list instead of drag data.
Updated•2 years ago
|
Comment 5•2 years ago
|
||
Set release status flags based on info from the regressing bug 1786251
Comment 7•2 years ago
|
||
| bugherder | ||
Comment 8•2 years ago
|
||
The patch landed in nightly and beta is affected.
:jhorak, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox124towontfix.
For more information, please visit BugBot documentation.
Comment on attachment 9381020 [details]
Bug 1880698 Use drag uris when converting to text/uri-list; r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: D&D in Firefox doesn't work for files.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Minor tweak to recent D&D code.
- String changes made/needed:
- Is Android affected?: No
Comment 11•2 years ago
|
||
Comment on attachment 9381020 [details]
Bug 1880698 Use drag uris when converting to text/uri-list; r=stransky
Approved for 124.0b5
Comment 12•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Description
•