Bug 1880698 Use drag uris when converting to text/uri-list; r=stransky

When trying to convert the application/x-moz-file drag target to text/uri-list use the
target drag uris list instead of drag data.

Differential Revision: https://phabricator.services.mozilla.com/D202233